overlays/istio_canary/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: base-app
spec:
  gateways:
  - httpbin-gateway
  hosts:
  - REDACTED
  http:
  - route:
    - destination:
        host: httpbin.canary.svc.cluster.local
        subset: v1
        port:
          number: 8000
      weight: 10
    - destination:
        host: httpbin.canary.svc.cluster.local
        subset: v2
        port:
          number: 8001
      weight: 90
